// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content 1 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <h2>
      標籤
    </h2>
    <div
      class="tagName choice"
    >
      tag1
    </div>
    <div
      class="tagName "
    >
      tag2
    </div>
    <div
      class="tagName "
    >
      tag3
    </div>
    <div
      class="tagName "
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 1
    </div>
  </div>
</div>
`;

exports[`content 2 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <h2>
      標籤
    </h2>
    <div
      class="tagName "
    >
      tag1
    </div>
    <div
      class="tagName choice"
    >
      tag2
    </div>
    <div
      class="tagName "
    >
      tag3
    </div>
    <div
      class="tagName "
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 2
    </div>
  </div>
</div>
`;

exports[`content 3 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <h2>
      標籤
    </h2>
    <div
      class="tagName "
    >
      tag1
    </div>
    <div
      class="tagName "
    >
      tag2
    </div>
    <div
      class="tagName choice"
    >
      tag3
    </div>
    <div
      class="tagName "
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 3
    </div>
  </div>
</div>
`;

exports[`content 4 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <h2>
      標籤
    </h2>
    <div
      class="tagName "
    >
      tag1
    </div>
    <div
      class="tagName "
    >
      tag2
    </div>
    <div
      class="tagName "
    >
      tag3
    </div>
    <div
      class="tagName choice"
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 4
    </div>
  </div>
</div>
`;
